--- a/LocalNotificationSample/LocalNotificationSample/Main.storyboard
+++ b/LocalNotificationSample/LocalNotificationSample/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Main View Controller-->
         <scene sceneID="JW3-h7-Bai">
             <objects>
-                <viewController storyboardIdentifier="FSViewController" title="Main View Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vYy-39-P3C" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" title="Main View Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vYy-39-P3C" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JkA-2S-EYm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
