--- a/DBASample/DBASample/Base.lproj/Main.storyboard
+++ b/DBASample/DBASample/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -29,7 +29,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" priority="250" constant="200" id="Vfq-p4-QeS"/>
                                 </constraints>
-                                <string key="text">This sample demonstrates a recording session functionality. Please see the HOWTO included in this project for detailed instructions.</string>
+                                <string key="text">This sample demonstrates a recording session functionality. Please see the README included in this project for detailed instructions.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -42,7 +42,7 @@
                                     <action selector="startRecordingAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XCa-EL-fhx"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44E-KK-Hq5" userLabel="Feedback Eligibility">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44E-KK-Hq5">
                                 <rect key="frame" x="20" y="335.33333333333331" width="353" height="30"/>
                                 <color key="backgroundColor" red="0.1686274707" green="0.39607840779999998" blue="0.94901961089999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -51,7 +51,7 @@
                                     <action selector="stopRecordingAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ev6-y8-w6A"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RZe-2F-VvF" userLabel="Feedback Eligibility">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RZe-2F-VvF">
                                 <rect key="frame" x="20" y="385.33333333333331" width="353" height="30"/>
                                 <color key="backgroundColor" red="0.1686274707" green="0.39607840779999998" blue="0.94901961089999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -90,11 +90,11 @@
             <objects>
                 <viewController id="9BS-S8-bgI" customClass="MasksViewController" customModule="DBASample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RRB-g2-xQr">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWk-d6-Gjd">
-                                <rect key="frame" x="20" y="108.99999999999999" width="353" height="166.66666666666663"/>
+                                <rect key="frame" x="20" y="49.999999999999986" width="353" height="166.66666666666663"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="250" constant="200" id="Jam-5K-d3V"/>
@@ -106,37 +106,37 @@ In this app, debug masking is enabled so that you can verify the position of the
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mask this text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vcm-P2-Zc1">
-                                <rect key="frame" x="20" y="295.66666666666669" width="353" height="34"/>
+                                <rect key="frame" x="20" y="236.66666666666666" width="353" height="33.999999999999972"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text field masking:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Yx-qx-rQz">
-                                <rect key="frame" x="20" y="354.66666666666669" width="284" height="21"/>
+                                <rect key="frame" x="20" y="295.66666666666669" width="284" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xys-TV-3Mu">
-                                <rect key="frame" x="324" y="349.66666666666669" width="51" height="31"/>
+                                <rect key="frame" x="324" y="290.66666666666669" width="51" height="31"/>
                                 <color key="onTintColor" red="0.1686274707" green="0.39607840779999998" blue="0.94901961089999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <connections>
                                     <action selector="textFieldMaskSwitchChanged:" destination="9BS-S8-bgI" eventType="valueChanged" id="ZDs-fW-C1O"/>
                                 </connections>
                             </switch>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="verint_logo" translatesAutoresizingMaskIntoConstraints="NO" id="35O-8M-ccp">
-                                <rect key="frame" x="113.33333333333333" y="400.66666666666669" width="166.66666666666669" height="70"/>
+                                <rect key="frame" x="113.33333333333333" y="341.66666666666669" width="166.66666666666669" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="Mf5-cA-HNf"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image view masking:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qz-Ls-F5H">
-                                <rect key="frame" x="20" y="495.66666666666669" width="284" height="21.000000000000057"/>
+                                <rect key="frame" x="20" y="436.66666666666669" width="284" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tKL-re-BkV">
-                                <rect key="frame" x="324" y="490.66666666666669" width="51" height="31.000000000000057"/>
+                                <rect key="frame" x="324" y="431.66666666666669" width="51" height="31"/>
                                 <color key="onTintColor" red="0.1686274707" green="0.39607840779999998" blue="0.94901961089999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <connections>
                                     <action selector="imageViewMaskSwitchChanged:" destination="9BS-S8-bgI" eventType="valueChanged" id="cXj-dJ-Kks"/>
